adding some contact related layouts

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -37,7 +37,7 @@
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gérer les numéros bloqués</string>
-    <string name="not_blocking_anyone">Aucun numéro n'est bloqué</string>
+    <string name="not_blocking_anyone">Aucun numéro n\'est bloqué</string>
     <string name="add_a_blocked_number">Ajouter un numéro bloqué</string>
     <string name="block_number">Numéro bloqué</string>
     <string name="block_numbers">Numéros bloqués</string>
