--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -165,6 +165,13 @@
         <item quantity="other">Odstraňuje sa %d položiek</item>
     </plurals>
 
+    <!-- Are you sure you want to delete 5 contacts? -->
+    <plurals name="delete_contacts">
+        <item quantity="one">%d kontakt</item>
+        <item quantity="few">%d kontakty</item>
+        <item quantity="other">%d kontaktov</item>
+    </plurals>
+
     <!-- Storages -->
     <string name="select_storage">Zvoľte úložisko</string>
     <string name="internal">Interné</string>
