adding a new string for adding a number to a contact

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -256,6 +256,7 @@
     <string name="redo">إعادة</string>
     <string name="print">طباعة</string>
     <string name="create_shortcut">إنشاء أختصار</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">فرز حسب</string>
