--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -262,6 +262,7 @@
     <string name="redo">Znovu</string>
     <string name="print">Tisk</string>
     <string name="create_shortcut">Vytvořit zkratku</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Seřadit dle</string>
