--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Gentag</string>
     <string name="print">Udskriv</string>
     <string name="create_shortcut">Opret genvej</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter efter</string>
