--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Répéter</string>
     <string name="print">Imprimer</string>
     <string name="create_shortcut">Créer un raccourci</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
