--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -257,6 +257,7 @@
     <string name="redo">Mégis</string>
     <string name="print">Nyomtatás</string>
     <string name="create_shortcut">Parancsikon készítése</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Rendezés</string>
