--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Ripeti</string>
     <string name="print">Stampa</string>
     <string name="create_shortcut">Crea scorciatoia</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordina per</string>
