--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -259,6 +259,7 @@
     <string name="redo">Ponów</string>
     <string name="print">Drukuj</string>
     <string name="create_shortcut">Create shortcut</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortuj według parametru:</string>
