--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Refazer</string>
     <string name="print">Imprimir</string>
     <string name="create_shortcut">Criar atalho</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
