--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -262,6 +262,7 @@
     <string name="redo">Повторить</string>
     <string name="print">Печать</string>
     <string name="create_shortcut">Создать ярлык</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортировать по…</string>
