--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -262,6 +262,7 @@
     <string name="redo">Obnoviť</string>
     <string name="print">Tlačiť</string>
     <string name="create_shortcut">Vytvoriť skratku</string>
+    <string name="add_number_to_contact">Priradiť číslo kontaktu</string>
 
     <!-- Sorting -->
     <string name="sort_by">Na zoradenie použiť</string>
