--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Gör om</string>
     <string name="print">Skriv ut</string>
     <string name="create_shortcut">Skapa genväg</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortera efter</string>
