--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Повторити</string>
     <string name="print">Друкувати</string>
     <string name="create_shortcut">Створити посилання</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортувати за</string>
