--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -255,6 +255,7 @@
     <string name="redo">重做</string>
     <string name="print">打印</string>
     <string name="create_shortcut">创建快捷方式</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
