--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -255,6 +255,7 @@
     <string name="redo">取消復原</string>
     <string name="print">列印</string>
     <string name="create_shortcut">建立捷徑</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序</string>
