--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Refer</string>
     <string name="print">Imprimir</string>
     <string name="create_shortcut">Crear accès directe</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
