--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -270,6 +270,7 @@
     <string name="redo">Ail-wneud</string>
     <string name="print">Argraffu</string>
     <string name="create_shortcut">Create shortcut</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trefnu yn ôl</string>
