--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -261,6 +261,7 @@
     <string name="redo">Ponovi promjenu</string>
     <string name="print">Print</string>
     <string name="create_shortcut">Create shortcut</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortiraj po</string>
