--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -255,6 +255,7 @@
     <string name="redo">やり直し</string>
     <string name="print">印刷</string>
     <string name="create_shortcut">ショートカットを作成</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">並べ替え</string>
