--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Žingsnis į priekį</string>
     <string name="print">Spausdinti</string>
     <string name="create_shortcut">Sukurti nuorodą</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Rūšiuoti pagal</string>
