--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Annuler angre</string>
     <string name="print">Skriv ut</string>
     <string name="create_shortcut">Opprett snarvei</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter etter</string>
