--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Opnieuw</string>
     <string name="print">Printen</string>
     <string name="create_shortcut">Snelkoppeling maken</string>
+    <string name="add_number_to_contact">Nummer aan contact toevoegen</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
