--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -257,6 +257,7 @@
     <string name="redo">Поврати измене</string>
     <string name="print">Штампај</string>
     <string name="create_shortcut">Create shortcut</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортирај према</string>
