--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Yinele</string>
     <string name="print">Yazdır</string>
     <string name="create_shortcut">Kısayol oluştur</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sıralama ölçütü</string>
