--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -258,6 +258,7 @@
     <string name="redo">Khôi phục</string>
     <string name="print">In</string>
     <string name="create_shortcut">Tạo phím tắt</string>
+    <string name="add_number_to_contact">Add number to contact</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sắp xếp theo</string>
