--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -258,7 +258,7 @@
     <string name="redo">Rehacer</string>
     <string name="print">Imprimir</string>
     <string name="create_shortcut">Crear atajo</string>
-    <string name="add_number_to_contact">Add number to contact</string>
+    <string name="add_number_to_contact">Anadir el número a contactos</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
