--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -258,7 +258,7 @@
     <string name="redo">Επανάληψη</string>
     <string name="print">Εκτύπωση</string>
     <string name="create_shortcut">Δημιουργία συντόμευσης</string>
-    <string name="add_number_to_contact">Add number to contact</string>
+    <string name="add_number_to_contact">Προσθήκη αριθμού επαφής</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ταξινόμηση κατά</string>
